fix codesmells 4