@@ -121,7 +121,7 @@ public class DefaultLayout extends JLayeredPane {
     protected void displaySegment(int x, int y, int w, int h, String str) {
         w /= str.length();
         for (int i = 0; i < str.length(); i++) {
-            add(new SegmentDisplay(x + PADDING, y + PADDING, w - 2 * PADDING, h - 2 * PADDING, str.charAt(i)), new Integer(2));
+            add(new SegmentDisplay(x + PADDING, y + PADDING, w - 2 * PADDING, h - 2 * PADDING, str.charAt(i)), Integer.valueOf(2));
             x += w;
         }
     }
@@ -129,7 +129,7 @@ public class DefaultLayout extends JLayeredPane {
     protected void displaySegment(int x, int y, int w, int h, String str, int layer) {
         w /= str.length();
         for (int i = 0; i < str.length(); i++) {
-            add(new SegmentDisplay(x + PADDING, y + PADDING, w - 2 * PADDING, h - 2 * PADDING, str.charAt(i)), new Integer(layer));
+            add(new SegmentDisplay(x + PADDING, y + PADDING, w - 2 * PADDING, h - 2 * PADDING, str.charAt(i)), Integer.valueOf(layer));
             x += w;
         }
     }
